--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ html {
   display: flex;
   flex-direction: column;
 }
-
 body {
   background-color: #f5f6f8;
   color: #3b3b3b;
@@ -22,7 +21,6 @@ body {
   text-align: center;
   transition: opacity 0.3s;
 }
-
 h1,
 h2,
 h3,
@@ -30,7 +28,10 @@ h4,
 h5,
 h6,
 button,
+footer,
+input,
 textarea,
+.copyright,
 .button {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Helvetica Neue", "Ubuntu", sans-serif;
@@ -43,12 +44,65 @@ h1 {
   font-weight: bold;
   margin: 0px;
 }
-
 h2 {
   color: #3b3b3b;
   font-size: 28px;
   font-weight: bold;
   margin: 16px 0 8px 0;
+}
+h3 {
+  color: #3b3b3b;
+  font-size: 24px;
+  font-weight: 700;
+  margin: 8px 0 4px 0;
+}
+h4 {
+  color: #3b3b3b;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 4px;
+}
+h5 {
+  color: #3b3b3b;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 4px;
+}
+h6 {
+  color: #3b3b3b;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 4px;
+}
+a {
+  color: #194b7d;
+  text-decoration: none;
+}
+
+.outlineButton,
+.button,
+button {
+  background-color: #194b7d;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 10px 16px;
+  white-space: nowrap;
+}
+
+footer {
+  color: #9c9c9c;
+  margin: 40px;
+}
+
+footer a {
+  font-weight: bold;
 }
 
 .pageContainer {
@@ -119,13 +173,137 @@ h2 {
   text-transform: uppercase;
 }
 
+.statusHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 2px;
+}
+
+.statusSubtitle {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.statusHeadline {
+  color: #eee;
+  padding: 4px 8px;
+  border-radius: 15px;
+  font-size: 12px;
+  font-weight: 700;
+  margin-left: 12px;
+}
+
+.statusUptime {
+  flex: 1;
+  text-align: right;
+  color: #7c7c7c;
+  font-size: 12px;
+}
+
+.uptimeContainer {
+  color: #999;
+  display: flex;
+  margin-top: 8px;
+  font-size: 12px;
+}
+
+.uptimeContainer hr {
+  border: none;
+  border-top: 1px dashed #eee;
+  width: 100%;
+  margin: 10px;
+}
+
+.success {
+  background-color: #4cae50;
+  color: #fff;
+}
+
+.failure {
+  background-color: #f44336;
+  color: #fff;
+}
+
+.nodata {
+  background-color: #f8f8f8;
+  color: #ccc;
+}
+
+.partial {
+  background-color: #ff9800;
+  color: #fff;
+}
+
+.tooltip {
+  background-color: #fff;
+  box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  color: #3b3b3b;
+  font-size: 12px;
+  line-height: 18px;
+  padding: 16px;
+  position: absolute;
+  text-align: left;
+  z-index: 100;
+  width: 240px;
+  transition: opacity 0.2s;
+}
+
+.tooltip .tooltipArrow {
+  position: absolute;
+  bottom: 100%;
+  width: 4px;
+  text-align: center;
+  border: 4px solid transparent;
+  border-bottom-color: #fff;
+  left: 50%;
+  margin-left: -2px;
+}
+
+.tooltip .tooltipDateTime {
+  font-size: 12px;
+  color: #7c7c7c;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.tooltip .tooltipKey {
+  color: #ccc;
+  font-size: 10px;
+}
+
+.tooltip .tooltipDescription {
+  margin-top: 12px;
+  font-size: 14px;
+  color: #181818;
+}
+
+.tooltip #tooltipStatus {
+  padding: 4px 8px;
+  border-radius: 15px;
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 6px;
+  display: inline-block;
+}
+
+.tooltip hr {
+  border: none;
+  border-top: 1px solid #ededed;
+  margin-top: 16px;
+}
+
 @media screen and (max-width: 800px) {
   .pageContainer {
     padding: 30px 20px;
+    margin: 0 auto 40px auto;
   }
 
   .statusHeader,
-  .statusSubtitile {
+  .statusSubtitle {
     display: block;
   }
 
